fixedoff center issue with profile dropdown

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -38,58 +38,75 @@
   
 
   /* --------------------------------- */
-
-  .profile-button{
-    display: flex;
-    flex-direction: column;
+  .profileButtonWrapper {
+    position: relative;
+    right: 250px;
   }
-
-  #profilebutton, #profileLogoutButton{
+  
+  .profileButton {
+    height: 24px;
     background: none;
     border: none;
-    font-size:12px;
-    cursor: pointer;
-    color: #79797a;
-    margin-top: 5px;
-    margin-right: 40px;
-}
-
-#profilebutton:hover, #profileLogoutButton:hover {
-    color: white;
-}
-
-#profilebutton {
-    position: relative;
-    margin-top: 10px;
-    margin-right: 150px;
-}
-
-.profile-dropdown li{
-    position: absolute;
-   
-    left: 70.7%;
-    background-color: #181a21;
-    white-space: nowrap;
-    color: white;
-    padding-top:10px;
-    font-size:12px;
-    width:150px;
-    /* list-style-type:none; */
-    margin-right: 20px;
-    box-shadow: 10px 5px 30px #020202e3;
-}
-
-li > button {
-    margin-bottom: 100px;
-}
-
-.username {
-    font-weight: 200;
-    color: #54c1d3;
+    margin-right: 6px;
+    color: #c5c3c2;
+    font-size: 11.5px;
   }
   
-
-
+  .profileButton:hover {
+    cursor: pointer;
+    color: white;
+  }
   
+  .profileButtonDropdown {
+    position: absolute;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: #171a21;
+    width: 150px;
+    height: 132px;
+    padding: 6px 0 6px 0;
+    box-shadow: 0 0 12px #000000;
+    animation: fadein 2s;
+    overflow: hidden;
+    z-index: 3;
+  }
+  
+  .profileButtonDropdown * {
+    background: none;
+    border: none;
+    color: #b8b6b4;
+    display: flex;
+    align-items: center;
+    height: 27px;
+    text-decoration: none;
+    font-size: 11.5px;
+    padding: 5px 12px 5px 12px;
+    margin: 8px 0;
+    font-family: inherit;
+  }
+  
+  .profileButtonDropdownItem{
+    margin-bottom: 100px;
+  }
+  
+  .profileButtonDropdown *:hover {
+    cursor: pointer;
+  }
+  
+  .profileButtonDropdownItem:hover {
+    color: white;
+    text-shadow: 0px 0px 1px #57cbde;
+  }
+  
+  .logoutUserName{
+    color: #57cbde;
+  }
+  
+  .logoutUserName:hover{
+    cursor: pointer;
+    text-shadow: 0px 0px 1px #57cbde;
+  }
   
   
